# pytest-translations

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  pytest_translations.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_translations.py
.github/workflows/: ci.yml  release.yml
pytest_translations/: __init__.py  config.py  mo_files.py  po_files.py  po_spelling.py  utils.py
