[metadata]
name = pytest-translations
author = Thermondo GmbH
author-email = opensource@thermondo.de
summary = Test your translation filesTest your translation files.
description-file = README.rst
home-page = https://github.com/Thermondo/pytest-translations
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2

[files]
packages =
    pytest_translations

[entry_points]
pytest11 =
    pytest_translations = pytest_translations

[tool:pytest]
norecursedirs=venv env
addopts = --tb=short

[pycodestyle]
max-line-length = 99
statistics = true
show-source = true
exclude = docs,runtests.py,setup.py,env

[pydocstyle]
match-dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py
add_ignore = D1
